[gd_scene load_steps=11 format=3 uid="uid://c0qyylco7xgk4"]

[ext_resource type="Script" uid="uid://c57nhmckfrbx8" path="res://entities/enemies/turret.gd" id="1_n7j26"]
[ext_resource type="Shader" uid="uid://bwseyl1xcp2qo" path="res://entities/enemy.gdshader" id="3_cduuy"]
[ext_resource type="PackedScene" uid="uid://b2erii1hcv0u0" path="res://misc/logic/RangeAggro.tscn" id="4_d8hp7"]
[ext_resource type="Script" uid="uid://dgegklgqwvpxa" path="res://misc/logic/char_texture.gd" id="4_dkfhv"]
[ext_resource type="PackedScene" uid="uid://diissjbt0i6uj" path="res://misc/logic/HurtAggro.tscn" id="5_vd4d6"]
[ext_resource type="PackedScene" uid="uid://bmrdsgmlwoebu" path="res://fx/EnemyHurt.tscn" id="6_myqr2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cduuy"]
resource_local_to_scene = true
shader = ExtResource("3_cduuy")
shader_parameter/health = 1.0
shader_parameter/velocity = Vector2(0, 0)
shader_parameter/damaged = false

[sub_resource type="Image" id="Image_xj7pi"]
data = {
"data": PackedByteArray(255, 255, 255, 255),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id="ImageTexture_vd4d6"]
image = SubResource("Image_xj7pi")
script = ExtResource("4_dkfhv")
metadata/_custom_type_script = "uid://dgegklgqwvpxa"

[sub_resource type="CircleShape2D" id="CircleShape2D_u77d8"]
radius = 11.0

[node name="Turret" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_n7j26")
speed = 80
acceleration = 200
deceleration = 1000
wander_length = 10
wander_speed_mult = 0.1
fund_drop = 25
fund_drop_randomization = 0.3
stagger_time = 0.0

[node name="Render" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cduuy")
scale = Vector2(22, 22)
texture = SubResource("ImageTexture_vd4d6")

[node name="RangeAggro" parent="." instance=ExtResource("4_d8hp7")]
scale = Vector2(0.998148, 1)
aggro_range = 200
deaggro_range = 300

[node name="HurtAggro" parent="." instance=ExtResource("5_vd4d6")]
aggro_length = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u77d8")

[node name="HurtEffect" parent="." instance=ExtResource("6_myqr2")]

[node name="FiringCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RetargetTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="FiringCooldown" to="." method="_on_firing_cooldown_timeout"]
[connection signal="timeout" from="RetargetTimer" to="." method="circle"]
